--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Blog
 APP_ENV=local
-APP_KEY=base64:gW3gMYJiuGoTGqe4XSQgisaJ2gBDCqwa8hreNwbGZWQ=
+APP_KEY=base64:INMN/CJnWLFK1rngZMfmu+sQcXvRLBCxVmyw1ZtNZNc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://blog.test
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=blogies
+DB_DATABASE=examen
 DB_USERNAME=root
 DB_PASSWORD=
 
