--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:INMN/CJnWLFK1rngZMfmu+sQcXvRLBCxVmyw1ZtNZNc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://blog.test
+APP_URL=http://examen.test
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
@@ -23,7 +23,6 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=examen
-
 DB_USERNAME=root
 DB_PASSWORD=
 
